test/typecheck/bad-bulk-memory-no-table.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-bulk-memory
;;; ERROR: 1

(module
  (func
    i32.const 0 i32.const 0 i32.const 0 table.init 0
    elem.drop 0
    i32.const 0 i32.const 0 i32.const 0 table.copy
  )
)
(;; STDERR ;;;
out/test/typecheck/bad-bulk-memory-no-table.txt:7:41: error: table.init requires an imported or defined table.
    i32.const 0 i32.const 0 i32.const 0 table.init 0
                                        ^^^^^^^^^^
out/test/typecheck/bad-bulk-memory-no-table.txt:7:52: error: elem_segment variable out of range (max 0)
    i32.const 0 i32.const 0 i32.const 0 table.init 0
                                                   ^
out/test/typecheck/bad-bulk-memory-no-table.txt:8:5: error: elem.drop requires an imported or defined table.
    elem.drop 0
    ^^^^^^^^^
out/test/typecheck/bad-bulk-memory-no-table.txt:8:15: error: elem_segment variable out of range (max 0)
    elem.drop 0
              ^
out/test/typecheck/bad-bulk-memory-no-table.txt:9:41: error: table.copy requires an imported or defined table.
    i32.const 0 i32.const 0 i32.const 0 table.copy
                                        ^^^^^^^^^^
;;; STDERR ;;)
